Cleaned up options in dropdox boxes.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                 <label for="step-2__select">Customize Top:</label>
                 <select name="top" id="step-2__select">
-                    <option select="selected" value="none">No Customization</option>
+                    <option select="selected" value="none">No customization</option>
                     <option value="icon">Choose Icon</option>
                     <option value="text">Custom Text</option>
                     <option value="quote_1">Quote 1</option>
@@ -225,8 +225,7 @@
 
                 <label for="step-3__select">Customize Front:</label>
                 <select name="front" id="step-3__select">
-                    <option value="_">Please make a selection</option>
-                    <option value="none">No Customization</option>
+                    <option value="none">No customization</option>
                     <option value="icon">Choose Icon</option>
                     <option value="text">Custom Text</option>
                     <option value="quote_1">Quote 1</option>
@@ -328,8 +327,7 @@
 
                 <label for="step-4__select">Customize Lid:</label>
                 <select name="lid" id="step-4__select">
-                    <option value="_">Please make a selection</option>
-                    <option value="none">No Customization</option>
+                    <option value="none">No customization</option>
                     <option value="text">Custom Text</option>
                     <option value="image">Upload Image</option>
                 </select>
@@ -363,7 +361,6 @@
 
                 <label for="step-5__select">Gift:</label>
                 <select name="gift" id="step-5__select">
-                    <option value="_">Please make a selection</option>
                     <option value="none">No Gift</option>
                     <option value="text">Leather Coaster</option>
                     <option value="icon">Jack Daniel's&trade; Fudge</option>
